Refine formatting for sidebar items up to “Mandates”

--- a/content/payments/umap/mandates/generic.mdx
+++ b/content/payments/umap/mandates/generic.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Mandate Operations
-page_title: UMAP - Mandates - Mandate Operations
+sidebar_title: Mandate operations
+page_title: UMAP - Mandates - Mandate operations
 order: 4
 visible_in_sidebar: true
 ---
@@ -9,17 +9,17 @@ visible_in_sidebar: true
 A UPI mandate itself is not a transaction, but rather a standing instruction on the basis of which transactions are carried out. Therefore, a status of a mandate can change, just like updating an agreement between two parties. 
 
 There are four main operations that can happen on a UPI mandate after creation—
-- <a href="/payments/umap/mandates/generic/update" target="_blank">Updating a mandate ↗</a>
-- <a href="/payments/umap/mandates/generic/revoke" target="_blank">Revoking a mandate ↗</a>
-- <a href="/payments/umap/mandates/generic/pause" target="_blank">Pausing a mandate ↗</a>
-- <a href="/payments/umap/mandates/generic/unpause" target="_blank">Un-pausing a paused mandate ↗</a>
+- <a href="/payments/umap/mandates/generic/update">Updating a mandate ↗</a>
+- <a href="/payments/umap/mandates/generic/revoke">Revoking a mandate ↗</a>
+- <a href="/payments/umap/mandates/generic/pause">Pausing a mandate ↗</a>
+- <a href="/payments/umap/mandates/generic/unpause">Un-pausing a paused mandate ↗</a>
 
-#### Explore our UPI Mandate products
+#### Explore our UPI mandate products
 
 <Link href="/payments/umap/mandates">
     <Card padding="small" shape="rounded">
             <Text size="large" weight="600" textColor="blue-90">
-                UPI Mandates overview ↗
+                UPI mandates overview ↗
             </Text>
             <Text weight="400">Explore other UMAP UPI Mandates products here.</Text>
     </Card>
