--- a/content/payments/umap/mandates/otm.mdx
+++ b/content/payments/umap/mandates/otm.mdx
@@ -1,22 +1,20 @@
 ---
-sidebar_title: One Time
-page_title: UMAP - Mandates - One Time Mandates
+sidebar_title: One-time
+page_title: UMAP - Mandates - One-time mandates
 order: 1
 visible_in_sidebar: true
 ---
 
-## One Time Mandates
+## One-time mandates
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates">UPI Mandates Overview ↗</a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates">🌟 UPI mandates overview ↗</a>
 
 <br />
 
-#### What is a One Time Mandate ?
+#### What is a one-time mandate ?
 
 A one time mandate a mandate that can be executed only once at a later date after taking user consent. One time mandates are very useful for conditional flows like:
 
