--- a/content/payments/umap/mandates/otm/create.mdx
+++ b/content/payments/umap/mandates/otm/create.mdx
@@ -5,9 +5,9 @@ order: 1
 visible_in_sidebar: true
 ---
 
-## Create One Time Mandate
+## Create one time mandate
 
-There are 2 ways to create a one time mandate: **Intent based**, **Collect based**
+There are two ways to create a one time mandate—**Intent based** and **Collect based**
 
 <Tabs
   tabs={[
@@ -26,7 +26,7 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
             <table>
                 <tbody>
                     <tr>
-                        <th>Staging Host</th>
+                        <th>Staging host</th>
                         <td>
                             <code>https://umap-dev-core.setu.co/api</code>
                         </td>
@@ -197,7 +197,7 @@ There are 2 ways to create a one time mandate: **Intent based**, **Collect based
             <table>
                 <tbody>
                     <tr>
-                        <th>Staging Host</th>
+                        <th>Staging host</th>
                         <td>
                             <code>https://umap-dev-core.setu.co/api</code>
                         </td>
