--- a/content/payments/umap/mandates/recurring.mdx
+++ b/content/payments/umap/mandates/recurring.mdx
@@ -7,20 +7,18 @@ visible_in_sidebar: true
 
 ## Recurring Mandates
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates">UPI Mandates Overview ↗</a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates">🌟 UPI mandates overview ↗</a>
 
 <br />
 
-#### What is a Recurring Mandate ?
+#### What is a recurring mandate ?
 
 A recurring mandate is a mandate that that can be executed / debited multiple times as per the recurrence pattern configured / agreed upon during mandate creation.
 
-#### What can I do with a Recurring Mandate ?
+#### What can I do with a recurring mandate ?
 
 Recurring mandates help merchants seamless collect money multiple times with a single setup.
 
@@ -32,7 +30,7 @@ Recurring mandates help merchants seamless collect money multiple times with a s
 
 #### How it works
 
-The first step to collect a payment via a recurring mandate is for the **Merchant** to create a recurring mandate. There are 2 ways in which a recurring mandate can be created:<br/><br/>
+The first step to collect a payment via a recurring mandate is for the **merchant** to create a recurring mandate. There are 2 ways in which a recurring mandate can be created:<br/><br/>
 **Intent based :** Intent based mandates are always initiated by user through merchant app or by scanning a QR code.
 
 **Collect based** Collect based mandates are initated by merchant by taking user's VPA as an input and creating a request.
