--- a/content/payments/umap/mandates/recurring/create.mdx
+++ b/content/payments/umap/mandates/recurring/create.mdx
@@ -1,11 +1,11 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Mandates - Create Recurring Mandate
+page_title: UMAP - Mandates - Create recurring mandate
 order: 1
 visible_in_sidebar: true
 ---
 
-## Create Recurring Mandate
+## Create recurring mandate
 
 There are 2 ways to create a recurring mandate: **Intent based**, **Collect based**
 
