--- a/content/payments/umap/mandates/single-block-multi-debit.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit.mdx
@@ -1,31 +1,29 @@
 ---
-sidebar_title: Single Block Multi Debit
-page_title: UMAP - Mandates - Single Block Multi Debit Mandates
+sidebar_title: Single block multi-debit
+page_title: UMAP - Mandates - Single block multi-debit mandate
 order: 1
 visible_in_sidebar: true
 ---
 
-## Single Block Multi Debit Mandates
+## Single block multi-debit mandate
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates">UPI Mandates Overview ↗</a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates">🌟 UPI mandates overview ↗</a>
 
 <br />
 
 #### What is a Single Block Multi Debit Mandate ?
 
-A single block mutli debit mandate is a mandate that blocks a requested amount of funds in the customer's account and can be executed / debited multiple times against blocked funds.
+A single block multi-debit mandate is a mandate that blocks a requested amount of funds in the customer's account and can be executed / debited multiple times against the blocked funds.
 
 #### What can I do with a Single Block Multi Debit Mandate ?
 
-Single block multi debit mandates combines the simplicity of wallets with the convenience of UPI.
+Single block multi-debit mandates combines the simplicity of wallets with the convenience of UPI.
 
--   Enable try & buy COD orders for your D2C brand, debit only for unreturned apparel
--   Create in-app wallets by blocking funds on customer account and debiting for purchases
+-   Enable try and buy cash-on-delivery orders for your D2C brand, debit only for unreturned goods
+-   Create in-app wallets by blocking funds on customer account and debit after purchases
 -   Power smart margin trading by blocking funds which are released on demand when needed
 
 <hr class="primary" />
@@ -34,9 +32,8 @@ Single block multi debit mandates combines the simplicity of wallets with the co
 
 These are the steps involved in collecting a payment from a customer via an intent based single block multi debit mandate.
 
-<hr class="primary" />
 
-###### Step 1 - create a single block multi debit mandate
+###### Step 1 - Create a single block multi-debit mandate
 
 <ol>
     <li>
@@ -64,7 +61,7 @@ These are the steps involved in collecting a payment from a customer via an inte
 
 <hr class="tertiary" />
 
-###### Step 2 - trigger mandate execution
+###### Step 2 - Trigger mandate execution
 
 <ol>
     <li>
@@ -80,7 +77,7 @@ These are the steps involved in collecting a payment from a customer via an inte
 
 <hr class="tertiary" />
 
-###### Step 3 - check payment status
+###### Step 3 - Check payment status
 
 <p>
     <b>Merchant</b> can use check payment status API to check payment statuses
@@ -97,7 +94,8 @@ Other operations that can be performed on a single block multi debit mandate onc
     <li>Pausing a single block multi debit mandate</li>
     <li>Unpausing a paused single block multi debit mandate</li>
 </ul>
-These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
+
+These have been detailed in the <b>Mandate operations</b> section within UPI mandates
 <NextPage
     info={{
         description: "Create single block multi debit mandate.  ",
