--- a/content/payments/umap/mandates/single-block-multi-debit/create.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/create.mdx
@@ -1,11 +1,11 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Mandates - Create Single Block Multi Debit Mandate
+page_title: UMAP - Mandates - Create single block multi-debit mandate
 order: 1
 visible_in_sidebar: true
 ---
 
-## Create Single Block Multi Debit Mandate
+## Create single block multi-debit mandate
 <p>The merchant will have to call the <b><i>create mandate API</i></b> with the correct set of parameters.</p>
 <table>
     <tbody>
