--- a/content/payments/umap/mandates/otm/check-status.mdx
+++ b/content/payments/umap/mandates/otm/check-status.mdx
@@ -7,12 +7,11 @@ visible_in_sidebar: true
 
 ## Check mandate payment status
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/otm/execute">Execute Mandate ↗</a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/otm/execute" >🌟 Execute mandate ↗</a>
+
 
 <br />
 
@@ -21,7 +20,7 @@ The merchant can use the **<i>check status API</i>** to check mandate payment st
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
