--- a/content/payments/umap/mandates/recurring/check-status.mdx
+++ b/content/payments/umap/mandates/recurring/check-status.mdx
@@ -1,18 +1,16 @@
 ---
-sidebar_title: Check Status
-page_title: UMAP - Mandates - Check Payment Status
+sidebar_title: Check payment status
+page_title: UMAP - Mandates - Check payment status
 order: 4
 visible_in_sidebar: true
 ---
 
 ## Check mandate payment status
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/recurring/execute">Execute Mandate ↗</a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/recurring/execute">🌟 Execute mandate ↗</a>
 
 <br />
 
