--- a/content/payments/umap/mandates/recurring/execute.mdx
+++ b/content/payments/umap/mandates/recurring/execute.mdx
@@ -1,31 +1,29 @@
 ---
 sidebar_title: Execute
-page_title: UMAP - Mandates - Execute Recurring Mandate
+page_title: UMAP - Mandates - Execute mandate
 order: 3
 visible_in_sidebar: true
 ---
 
 ## Execute mandate
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/recurring/pre-debit-notify">
-        Pre debit notification ↗
-    </a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/recurring/pre-debit-notify">🌟 Pre-debit notification ↗</a>
 
 <br />
 
 <Callout type="tip">
-    Merchant intervention is only needed for an execution if{" "}
+    A merchant needs to manually execute the mandate, <strong>only if</strong>{" "}
     <code>autoExecute</code> and <code>autoPreNotify</code> are set to{" "}
-    <code>false</code> while creating a mandate
+    <code>false</code> while creating a mandate.
 </Callout>
+
 <br />
-Once the mandate pre debit notification is `successful`, the merchant can
-execute the mandate on the `executionDate` mentioned while sending the pre debit
+
+Once the pre-debit notification against the manadate is `successful`, the merchant can
+execute the mandate on the specified `executionDate` while sending the pre-debit
 notification.
 
 The process for mandate execution is described in the below diagram:
@@ -35,7 +33,7 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
