--- a/content/payments/umap/mandates/recurring/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/recurring/pre-debit-notify.mdx
@@ -7,14 +7,10 @@ visible_in_sidebar: true
 
 ## Send a pre debit notification
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/recurring/create">
-        Create recurring mandate ↗
-    </a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/recurring/create">🌟 Create recurring mandate ↗</a>
 
 <br />
 
