--- a/content/payments/umap/mandates/single-block-multi-debit/check-status.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/check-status.mdx
@@ -7,14 +7,10 @@ visible_in_sidebar: true
 
 ## Check mandate payment status
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/single-block-multi-debit/execute">
-        Execute Mandate ↗
-    </a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/single-block-multi-debit/execute">🌟 Execute mandate ↗</a>
 
 <br />
 
