Refine overview, quickstart, notifications initial pages.

--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -1,18 +1,18 @@
 ---
-sidebar_title: Notifications & Alerts
-page_title: UMAP - Notifications & Alerts
+sidebar_title: Notifications and alerts
+page_title: UMAP - Notifications and alerts
 order: 7
 visible_in_sidebar: true
 ---
 
 ## Notifications and alerts
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text weight="600">
-        Prerequisites:&nbsp;
-        <a href="/payments/umap/quickstart" target="_blank">Quickstart ↗</a>
-    </Text>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/quickstart">🌟 Quickstart ↗</a>
+
+<br/>
 
 UMAP has a robust notification system to provide a transparent experience for our merchants.
 
@@ -22,8 +22,8 @@ UMAP has a robust notification system to provide a transparent experience for ou
 
 Understand the notification payloads for each of our products—
 
-- **<a href="/payments/umap/notifications/payments" target="_blank">Payments ↗</a>**
-- **<a href="/payments/umap/notifications/mandates" target="_blank">Mandates ↗</a>**
-- **<a href="/payments/umap/notifications/refunds" target="_blank">Refunds ↗</a>**
-- **<a href="/payments/umap/notifications/disputes" target="_blank">Disputes ↗</a>**
-- **<a href="/payments/umap/notifications/customer-vpa-verification" target="_blank">Customer VPA Verification ↗</a>**
+- **<a href="/payments/umap/notifications/payments">Payments ↗</a>**
+- **<a href="/payments/umap/notifications/mandates">Mandates ↗</a>**
+- **<a href="/payments/umap/notifications/refunds">Refunds ↗</a>**
+- **<a href="/payments/umap/notifications/disputes">Disputes ↗</a>**
+- **<a href="/payments/umap/notifications/customer-vpa-verification">Customer VPA verification ↗</a>**
