--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Overview
 
-### What is UPI Merchant Acquiring Platform (UMAP)?
+### What is the UPI Merchant Acquiring Platform (UMAP)?
 
 UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite designed by Setu to empower **_merchants_** and **_merchant aggregators_** by providing state-of-the-art UPI solutions. 
 
