--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -11,9 +11,9 @@ This guide will help you get started with UMAP integration as an **aggregator**.
 
 <Callout type="tip">
     This quickstart is for an aggregator, if you are a merchant, please refer to the{" "}
-    <Link href="/payments/umap/quickstart" target="_blank">
-        Merchant quickstart
-    </Link>
+    <a href="/payments/umap/quickstart">
+        merchant quickstart
+    </a>.
 </Callout>
 
 <br />
