--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -11,9 +11,9 @@ This guide will help you get started with UMAP integration as a **merchant**.
 
 <Callout type="tip">
     This quickstart is for a merchant, if you are an aggregator, please refer to the{" "}
-    <Link href="/payments/umap/quickstart" target="_blank">
-        Aggregator quickstart
-    </Link>
+    <a href="/payments/umap/quickstart">
+        aggregator quickstart
+    </a>.
 </Callout>
 
 <br />
