fix(UPI-1144): fix login API sample request body in umap api integration landing page

--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -53,8 +53,8 @@ An API to generate access tokens, which are used to authorise any other API requ
 <CodeBlockWithCopy language="json">
     {`{
   "clientID": "client_id",
-  "secret": "client_secret"
-  "grant_type": "client_credentials",
+  "secret": "client_secret",
+  "grant_type": "client_credentials"
 }`}
 </CodeBlockWithCopy>
 
