Fix Consent flow

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -519,7 +519,7 @@ To solve for these use cases, AA framework provides a way for FIUs to communicat
         <tr>
             <th>Path</th>
             <td>
-                <code>/v2/consents/{request_id}/revoke</code>
+                <code>/v2/consents/:request_id/revoke</code>
             </td>
         </tr>
         <tr>
@@ -540,9 +540,7 @@ To solve for these use cases, AA framework provides a way for FIUs to communicat
     </tbody>
 </table>
 
-<Callout type="info">
-    This is a POST API without any request body
-</Callout>
+<Callout type="info">This is a POST API without any request body</Callout>
 
 <br />
 
@@ -569,7 +567,9 @@ To solve for these use cases, AA framework provides a way for FIUs to communicat
                 },
                 {
                     key: "2",
-                    label: <Badge type="failure">FAIL - Consent not found</Badge>,
+                    label: (
+                        <Badge type="failure">FAIL - Consent not found</Badge>
+                    ),
                     content: (
                         <>
                             <h5>Response</h5>
@@ -585,7 +585,9 @@ To solve for these use cases, AA framework provides a way for FIUs to communicat
                 },
                 {
                     key: "3",
-                    label: <Badge type="failure">FAIL - Consent not ready</Badge>,
+                    label: (
+                        <Badge type="failure">FAIL - Consent not ready</Badge>
+                    ),
                     content: (
                         <>
                             <h5>Response</h5>
