Fix content design

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -540,7 +540,9 @@ To solve for these use cases, AA framework provides a way for FIUs to communicat
     </tbody>
 </table>
 
-<Callout type="info">This is a POST API without any request body</Callout>
+<br/>
+
+<Callout type="tip">This is a POST API without any request body</Callout>
 
 <br />
 
