Refine UPI mandates section

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -1,16 +1,16 @@
 ---
-sidebar_title: UPI Mandates
-page_title: UPI Mandates
+sidebar_title: UPI mandates
+page_title: UPI mandates
 order: 4
 visible_in_sidebar: true
 ---
 
-# UPI Mandates
+# UPI mandates
 
-UPI Mandates is a recurring payments product built on the same rails of UPI which enables businesses to create subscriptions or one-time block based payments seamless via the user's favourite UPI app.  
+UPI mandates is a recurring payments product built on the same rails of UPI which enables businesses to create subscriptions or one-time block based payments seamlessly via the user's favourite UPI app.  
 
-## What can I do with UPI Mandates?
-Choose one or more of our products under the UMAP Mandates stack to
+### What can you do with UPI mandates?
+Choose one or more of our products under the UMAP mandates stack to—
 * Enable limited stock purchases like IPO investments on your wealth app
 * Create seamless subcsriptions for your services directly from UPI apps
 * Reimagine **cash on delivery** or **try and buy** with single block multi debits
@@ -36,11 +36,11 @@ A mandate will flow through the below statuses throughout its lifecycle -
 
 `mandate_initiated`&nbsp;A mandate creation request has been initiated. 
 
-`mandate_live` Customer authorization received & mandate is now active. 
+`mandate_live` Customer authorisation received & mandate is now active. 
 
 `mandate_complete`&nbsp;Mandate executions are done, and now mandate is closed.  
 
-`mandate_rejected`&nbsp;Due to error or no authorization, mandate could not be created.   
+`mandate_rejected`&nbsp;Due to error or no authorisation, mandate could not be created.   
 
 `mandate_paused`&nbsp;Customer has decided to temporarily stop executions on mandate.   
 
