--- a/content/payments/umap/mandates/generic/revoke.mdx
+++ b/content/payments/umap/mandates/generic/revoke.mdx
@@ -7,12 +7,12 @@ visible_in_sidebar: true
 
 # Revoking a mandate
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text weight="600">
-        Prerequisites:&nbsp;
-        <a href="/payments/umap/mandates/generic" target="_blank">UPI Mandates generic operations ↗</a>
-    </Text>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/generic">🌟 UPI mandates generic operations ↗</a>
+
+<hr class="primary" />
 
 Revoking a UPI mandate ensures no further actions can be taken on it, including updates to the mandate, pre-debit notifications against mandate, or execution of mandate.
 
