--- a/content/payments/umap/mandates/recurring.mdx
+++ b/content/payments/umap/mandates/recurring.mdx
@@ -1,11 +1,11 @@
 ---
 sidebar_title: Recurring
-page_title: UMAP - Mandates - Recurring Mandates
+page_title: UMAP - Mandates - Recurring mandates
 order: 1
 visible_in_sidebar: true
 ---
 
-## Recurring Mandates
+## Recurring mandates
 
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
