--- a/content/payments/umap/mandates/single-block-multi-debit.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit.mdx
@@ -12,13 +12,15 @@ visible_in_sidebar: true
 </Text>
 <a href="/payments/umap/mandates">🌟 UPI mandates overview ↗</a>
 
-<br />
+<hr class="primary" />
 
-#### What is a Single Block Multi Debit Mandate ?
+### What is a single block multi-debit mandate?
 
 A single block multi-debit mandate is a mandate that blocks a requested amount of funds in the customer's account and can be executed / debited multiple times against the blocked funds.
 
-#### What can I do with a Single Block Multi Debit Mandate ?
+<hr class="primary" />
+
+### What can I do with this product?
 
 Single block multi-debit mandates combines the simplicity of wallets with the convenience of UPI.
 
@@ -28,12 +30,13 @@ Single block multi-debit mandates combines the simplicity of wallets with the co
 
 <hr class="primary" />
 
-#### How it works
+### How it works
 
 These are the steps involved in collecting a payment from a customer via an intent based single block multi debit mandate.
 
+<hr class="tertiary" />
 
-###### Step 1 - Create a single block multi-debit mandate
+###### Step 1 — Create a single block multi-debit mandate
 
 <ol>
     <li>
@@ -63,43 +66,36 @@ These are the steps involved in collecting a payment from a customer via an inte
 
 ###### Step 2 - Trigger mandate execution
 
-<ol>
-    <li>
-        Every time that a payment needs to be collected, the <b>Merchant</b>{" "}
-        triggers mandate execution via <b>UMAP</b>.
-    </li>
-    <li>
-        <b>Customer</b> receives a collect request notification on their UPI
-        app, clicks on the notification and enters mPIN to authorise the
-        payment.
-    </li>
-</ol>
+Every time that a payment needs to be collected, the **merchant** triggers mandate execution via **UMAP**.
+
+A **customer** receives a collect request notification on their UPI app, clicks on the notification and enters mPIN to authorise the payment.
 
 <hr class="tertiary" />
 
 ###### Step 3 - Check payment status
 
-<p>
-    <b>Merchant</b> can use check payment status API to check payment statuses
-    associated to the mandate
-</p>
+A **merchant** can use check payment status API to check payment statuses
+associated to the mandate.
 
 <hr class="primary" />
 
-Other operations that can be performed on a single block multi debit mandate once it is <b>LIVE</b>
+### Other mandate operations
 
-<ul>
-    <li>Updating a single block multi debit mandate</li>
-    <li>Revoking a single block multi debit mandate</li>
-    <li>Pausing a single block multi debit mandate</li>
-    <li>Unpausing a paused single block multi debit mandate</li>
-</ul>
+Other operations that can be performed on a single block multi-debit mandate once it is `LIVE`
+<Text>
+    <ul>
+        <li>Updating a single block multi debit mandate</li>
+        <li>Revoking a single block multi debit mandate</li>
+        <li>Pausing a single block multi debit mandate</li>
+        <li>Unpausing a paused single block multi debit mandate</li>
+    </ul>
+</Text>
 
 These have been detailed in the <b>Mandate operations</b> section within UPI mandates
 <NextPage
     info={{
-        description: "Create single block multi debit mandate.  ",
+        description: "Create single block multi-debit mandate.  ",
         slug: "/payments/umap/mandates/single-block-multi-debit/create",
-        title: "Create Single Block Multi Debit Mandate",
+        title: "Create single block multi-debit mandate",
     }}
 />
