--- a/content/payments/umap/mandates/single-block-multi-debit/check-status.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/check-status.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Check Status
-page_title: UMAP - Mandates - Check Payment Status
+page_title: UMAP - Mandates - Check payment status
 order: 3
 visible_in_sidebar: true
 ---
@@ -12,7 +12,7 @@ visible_in_sidebar: true
 </Text>
 <a href="/payments/umap/mandates/single-block-multi-debit/execute">🌟 Execute mandate ↗</a>
 
-<br />
+<hr class="primary" />
 
 A single block multi debit mandate can have multiple payments associated to it.
 
@@ -29,7 +29,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     <table>
                         <tbody>
                             <tr>
-                                <th>Staging Host</th>
+                                <th>Staging host</th>
                                 <td>
                                     <code>
                                         https://umap-dev-core.setu.co/api
@@ -74,7 +74,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     </table>
                     <h6>Sample response</h6>
                     <CodeBlockWithCopy language="json">
-                        {`{
+{`{
     "amount": 10000,
     "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
     "currency": "INR",
@@ -122,7 +122,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     <table>
                         <tbody>
                             <tr>
-                                <th>Staging Host</th>
+                                <th>Staging host</th>
                                 <td>
                                     <code>
                                         https://umap-dev-core.setu.co/api
@@ -167,7 +167,7 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
                     </table>
                     <h6>Sample response</h6>
                     <CodeBlockWithCopy language="json">
-                        {`{
+{`{
   "payments": [
     {
       "amount": 10000,
