--- a/content/payments/umap/mandates/single-block-multi-debit/create.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/create.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Create
-page_title: UMAP - Mandates - Create single block multi-debit mandate
+page_title: UMAP - Mandates - Create single block multi-debit
 order: 1
 visible_in_sidebar: true
 ---
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -79,8 +79,8 @@ visible_in_sidebar: true
 <p><b>Request body parameter values for creating an intent based single block multi debit mandate</b></p>
 <table>
     <tr>
-        <th>parameter</th>
-        <th>value</th>
+        <th>Parameter</th>
+        <th>Value</th>
     </tr>
     <tr>
         <td>frequency</td>
@@ -165,7 +165,7 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-<b>In the above response:</b>
+<b>In the above response</b>
 <ul>
     <li>`intentLink` or corresponding qr can be shared directly with customers via a communication channel.</li>
     <li>`id` is a unique mandate ID that is associated with this mandate and can be used to track it later.</li>
@@ -181,12 +181,11 @@ visible_in_sidebar: true
     <li><b>mandate_operation.create.failed</b> (if mandate creation fails)</li>
 </ul>
 <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate create operation notifications <a href="/payments/umap/notifications/mandates/create">here</a></p>
-<p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/single-block-multi-debit/create#check-mandate-status">check mandate status API</Link> to check if mandate is <b>LIVE</b></p>
+<p>A merchant can use <Link href="/payments/umap/mandates/single-block-multi-debit/create#check-mandate-status">check mandate status API</Link> to check if the mandate is <code>LIVE</code> (this is an alternative way to get status, aside from the notifications sent by UMAP)</p>
 <p>Please refer to the Document Reference section for checking the API reference and the notifications.</p>
 
-<hr class="tertiary"/>
 
-<p>The process for mandate creation is described in the below diagram:</p>
+<p>The process for mandate creation is described in the below diagram</p>
 <img
 src="https://storage.googleapis.com/strapi-assets/latest/intent-mandate-creation/intent-mandate-creation.png"
 alt="Bridge"
@@ -196,12 +195,12 @@ alt="Bridge"
 
 #### Check mandate status
 
-In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate.
+A merchant can use this API to check the status of a mandate (this is an alternative way to get status, aside from the notifications sent by UMAP).
 
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
@@ -272,7 +271,8 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
     "umn": "c27f5fc30d344e9594fce0afa34f8859@mypsp"
 }`}
 </CodeBlockWithCopy>
-<b>In the above response:</b>
+
+<b>In the above response</b>
 <ul>
     <li><code>id</code> is a unique mandate ID that is associated with this mandate and can be used to track it later.</li>
     <li><code>umn</code> is a unique mandate identifier that is associated with this mandate and is needed for pre debit notification and execution APIs.</li>
