--- a/content/payments/umap/mandates/generic/pause.mdx
+++ b/content/payments/umap/mandates/generic/pause.mdx
@@ -7,12 +7,12 @@ visible_in_sidebar: true
 
 ## Pausing a mandate
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text weight="600">
-        Prerequisites:&nbsp;
-        <a href="/payments/umap/mandates/generic" target="_blank">UPI Mandates generic operations ↗</a>
-    </Text>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/generic">🌟 UPI mandates generic operations ↗</a>
+
+<hr class="primary" />
 
 <Callout type="tip">
     Only customers can pause a UPI mandate from their UPI app. 
