--- a/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
@@ -1,22 +1,18 @@
 ---
 sidebar_title: Execute
-page_title: UMAP - Mandates - Execute Single Block Multi Debit Mandate
+page_title: UMAP - Mandates - Execute single block multi-debit
 order: 2
 visible_in_sidebar: true
 ---
 
 ## Execute mandate
 
-<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
-    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequisites
-    </Text>
-    <a href="/payments/umap/mandates/single-block-multi-debit/create">
-        Create single block multi debit mandate ↗
-    </a>
-</Card>
+<Text size="small" weight="600">
+    PREREQUISITES&nbsp;
+</Text>
+<a href="/payments/umap/mandates/single-block-multi-debit/create">🌟 Create single block multi debit mandate ↗</a>
 
-<br />
+<hr class="primary" />
 
 Once the mandate is **LIVE**, the merchant can execute the mandate whenever a payment is to be collected from the customer.
 
@@ -27,7 +23,7 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 <table>
     <tbody>
         <tr>
-            <th>Staging Host</th>
+            <th>Staging host</th>
             <td>
                 <code>https://umap-dev-core.setu.co/api</code>
             </td>
