Refine text on API integration section

--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -5,7 +5,7 @@ order: 2
 visible_in_sidebar: true
 ---
 
-## API guide
+## API integration guide
 
 Once you get the `clientID` and `secret` from Setu, use them to generate tokens to authorise all API requests.
 
@@ -91,7 +91,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 
 <table>
     <tr>
-        <th>Staging Host</th>
+        <th>Staging host</th>
         <td>
             <code>https://accountservice-dev.setu.co</code>
         </td>
