--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart/aggregators" target="_blank">🌟 Aggregator quickstart ↗</a>
+<a href="/payments/umap/quickstart/aggregators">🌟 Aggregator quickstart ↗</a>
 
 <hr class="primary" />
 
