--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -5,62 +5,60 @@ order: 2
 visible_in_sidebar: true
 ---
 
-## Merchant API Integration
+## API integration for merchants
 
 <Text size="small" weight="600">
     PREREQUISITES&nbsp;
 </Text>
-<a href="/payments/umap/quickstart/merchants" target="_blank">🌟 Merchant quickstart ↗</a>
+<a href="/payments/umap/quickstart/merchants">🌟 Merchant quickstart ↗</a>
 
 <hr class="primary" />
 
-Once you have on-boarded onto UMAP as a merchant, and have your API credentials, the next step is to choose the right product for your use case.
-
 #### What can you do with UMAP?
+
+Once you have on-boarded onto UMAP as a merchant, and have your API credentials, the next step is to choose the right product for your use case. Below are some example scenarios to help you understand these products better—
 
 <table>
     <tr>
-        <th><Text as="h4" align="center">UPI Payments</Text></th>
-        <th><Text as="h4" align="center">UPI Mandates</Text></th>
-    </tr>
-    <tr>
         <td>
-            <ol>
+            <ul>
+                <Text as="h6">Use UPI payments to</Text>
                 <Text>
                     <li>
-                        Offer QR code and payment links for customers in-store or via apps and messaging.
+                        offer QR code and payment links for customers in-store or via apps and messaging.
                     </li>
                 </Text>
                 <Text>
                     <li>
-                        Enhance guest checkout with direct UPI collect payments on preferred UPI apps.
-                </li>
+                        enhance guest checkout with direct UPI collect payments on preferred UPI apps.
+                    </li>
                 </Text>
                 <Text>
                     <li>
-                        For BFSI merchants, comply with regulations through Third Party Validation (TPV).
+                        comply with regulations through Third Party Validation (TPV), for BFSI merchants.
                     </li>
                 </Text>
-            </ol>
+            </ul>
         </td>
         <td>
-            <ol>
+            <ul>
+                <Text as="h6">Use UPI mandates to</Text>
                 <Text>
                     <li>
-                        Use one-time mandates to clear limited stock exclusively for designated customers.
+                        use one-time mandates to clear limited stock exclusively for designated customers.
                     </li>
                 </Text>
                 <Text>
                     <li>
-                        Instantly create service subscriptions with UPI Mandates for recurring payments.
+                        instantly create service subscriptions with UPI Mandates for recurring payments.
                     </li>
                 </Text>
                 <Text>
                     <li>
-                        Replicate wallet functionality with single block multi-debit mandates from savings accounts.
+                        replicate wallet functionality with single block multi-debit mandates from savings accounts.
                     </li>
                 </Text>
-            </ol>
+            </ul>
         </td>
     </tr>
 </table>
@@ -75,7 +73,7 @@ Once you have on-boarded onto UMAP as a merchant, and have your API credentials,
             <Link href="/payments/umap/payments">
                 <Element as="div">
                     <Text size="large" weight="600" textColor="blue-90">
-                        Payments
+                        UPI payments
                     </Text>
                     <Text weight="400">
                         Start accepting UPI payments with QR, Collect & TPV.
@@ -89,10 +87,10 @@ Once you have on-boarded onto UMAP as a merchant, and have your API credentials,
             <Link href="/payments/umap/mandates">
                 <Element as="div">
                     <Text size="large" weight="600" textColor="blue-90">
-                        Mandates
+                        UPI mandates
                     </Text>
                     <Text weight="400">
-                        Start accepting recurring payments with UPI Mandates.
+                        Start enabling recurring payments with UPI Mandates.
                     </Text>
                 </Element>
             </Link>
