Refine text and formatting for merchant on-boarding

--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -57,6 +57,8 @@ This API can be used to assign a VPA to a merchant, which will serve as the merc
     </tbody>
 </table>
 
+<hr class="primary" />
+
 #### Sample request
 
 <CodeBlockWithCopy language="json">
