--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -40,7 +40,7 @@ After getting the merchant's information, a preliminary verification is conducte
     href="/payments/umap/merchant-on-boarding/create-merchant-api"
     target="_blank"
 >
-    Create Merchant API ↗
+    Create merchant API ↗
 </a>
 
 <hr class="tertiary" />
@@ -62,6 +62,7 @@ This API helps you check the availability of a desired VPA, to ensure it is uniq
 </Text>
 
 <br/>
+<br/>
 
 **Assign VPA (required)**
 
@@ -71,7 +72,6 @@ The next API is used to assign a VPA to the merchant. With this, merchant on-boa
         Create VPA API ↗
     </a>
 </Text>
-
 
 
 <hr class="primary" />
@@ -104,6 +104,7 @@ This API can be called to update the information associated with the merchant li
     </a>
 </Text>
 
+<br/>
 <br/>
 
 <Row>
